Add brands4friends as sponsor

--- a/data/sponsors.yml
+++ b/data/sponsors.yml
@@ -7,6 +7,9 @@ companies:
   - name: Teowaki
     url: http://teowaki.com/
     primary: false
+  - name: brands4friends
+    url: http://www.brands4friends.de/
+    primary: false
 
 sponsor_info: |
   Does your company use JRuby? You should consider sponsoring the only JRuby Conference in 2013!
