--- a/data/sponsors.yml
+++ b/data/sponsors.yml
@@ -13,6 +13,9 @@ companies:
   - name: nokia
     url: http://www.nokia.com/
     primary: false
+  - name: InnoQ
+    url: http://www.innoq.com/
+    primary: false
 
 sponsor_info: |
   Does your company use JRuby? You should consider sponsoring the only JRuby Conference in 2013!
