--- a/data/speakers.yml
+++ b/data/speakers.yml
@@ -335,7 +335,7 @@ speakers:
   - twitter: codefinger
     name: Joe Kutner
     company: "&nbsp;"
-    title: TorqueBox: This Ain't Your Grandpa's Enterprise
+    title: "TorqueBox: This Ain't Your Grandpa's Enterprise"
     bio: |-
       Joe is a freelance Ruby developer in the United States. He's built Ruby
       and JRuby applications for small startups, large enterprises, and every
