add charles keynote subject

--- a/data/schedule.yml
+++ b/data/schedule.yml
@@ -90,7 +90,7 @@ thursday:
     type:     other
   -
     start:    "9.45"
-    title:    "Keynote"
+    title:    "Keynote: Optimizing Ruby"
     type:     talk
     speaker:  headius
   -
