--- a/data/schedule.yml
+++ b/data/schedule.yml
@@ -71,7 +71,7 @@ wednesday:
     type:     break
   -
     start:    "16.30"
-    title:    Lightening Talks
+    title:    Lightning Talks
     type:     other
   -
     start:    "17.00"
