--- a/data/schedule.yml
+++ b/data/schedule.yml
@@ -72,7 +72,7 @@ wednesday:
   -
     start:    "16.30"
     title:    Lightning Talks
-    type:     talk
+    type:     other
   -
     start:    "17.00"
     end:      "17.15"
