Correct @iconara's talk
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/data/schedule.yml
+++ b/data/schedule.yml
@@ -113,7 +113,7 @@ thursday:
     speaker:  aivlis_s
   -
     start:    "11.45"
-    title:    The tip of the iceberg / Don't worry about scaling Rails
+    title:    Chasing the Elephant
     type:     talk
     speaker:  iconara
   -
