add Josh's talk

--- a/data/schedule.yml
+++ b/data/schedule.yml
@@ -141,7 +141,7 @@ thursday:
     speaker:  gimme_moe
   -
     start:    "15.15"
-    title:    TBA
+    title:    JRuby Running All The Things
     type:     talk
     speaker:  j2h
   -
